# browser-skills

./: .gitignore  .npmignore  CONTEXT.md  README.md  package.json  pyproject.toml
docs/adr/: 0001-import-cookies-from-live-browser-profile.md
plans/active/: live-cookie-import.md
plans/done/: cleanup-code-review-slop.md  delegate-native-aria-refs.md  generic-browser-skills-restructure.md
plans/proposed/: surf-axi-persistent-backend.md
skills/surf/: .gitignore  SKILL.md  pyproject.toml
skills/surf-chatgpt/: SKILL.md  pyproject.toml
skills/surf-chatgpt/src/surf_chatgpt/: __init__.py  browser_chatgpt.py  cli.py  client.py  errors.py  extract.py  models.py  surf.py  web_sessions.py
skills/surf-chatgpt/surf_chatgpt/: browser_chatgpt.py  cli.py  client.py  errors.py  models.py  prompts.py  surf.py  web_sessions.py
skills/surf-chatgpt/tests/: test_cli.py  test_client.py
skills/surf/docs/: axi-backend.md  backends.md  camoufox-backend.md  patchright-backend.md  setup.md
skills/surf/src/surf_agent/: __init__.py  camoufox_bridge.py  cli.py  constants.py  errors.py
skills/surf/src/surf_agent/backends/: __init__.py  axi.py  base.py  camoufox.py
skills/surf/src/surf_agent/backends/camoufox/: __init__.py  backend.py  bridge.py
skills/surf/src/surf_agent/backends/patchright/: backend.py  bridge.py
skills/surf/tests/: conftest.py  test_cli.py
tests/: test_browser_chatgpt.py  test_client.py  test_models.py  test_surf.py  test_web_sessions.py
tests/surf-chatgpt/: test_browser_chatgpt.py  test_cli.py  test_client.py  test_extract.py  test_models.py  (+3 more)
(+1 files in other folders)
