[project]
name = "surf-chatgpt"
version = "0.1.0"
description = "Bundled skill CLI for compact ChatGPT consultation through surf-agent"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
surf-chatgpt = "surf_chatgpt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
