[project]
name = "surf-agent"
version = "0.1.0"
description = "Agent-scoped wrapper for generic surf browser control"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
camoufox = ["cloverlabs-camoufox>=0.6.0"]
patchright = ["patchright"]

[project.scripts]
surf-agent = "surf_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
